[project]
name = "agentresearch"
version = "0.1.0"
description = "Research on Agent Memory: survey and prototype implementations"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "huggingface_hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"src/references/indexing.py" = ["E501"]
"src/memory/evaluation.py" = ["E501", "B905"]
"tests/test_memory.py" = ["E501"]
"tests/test_store_contracts.py" = ["I001"]
